applications secrets encoding

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.file=appLogs.log
 logging.pattern.file=%d [%level] %c{1.} [%t] %m%n
 #spring.main.allow-circular-references=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+aes.password=pdj912
+aes.salt=a09w8o1das
