--- a/app/package.json
+++ b/app/package.json
@@ -27,8 +27,11 @@
 		"flowbite-svelte": "^0.44.22",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.32",
+		"postcss-html": "^1.6.0",
 		"postcss-load-config": "^5.0.2",
 		"sass": "^1.69.5",
+		"stylelint": "^16.2.1",
+		"stylelint-config-standard": "^36.0.0",
 		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.6",
