--- a/server/src/main/resources/application.properties.example
+++ b/server/src/main/resources/application.properties.example
@@ -11,5 +11,6 @@ logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} [%thread] %highlight(%-5lev
 logging.file=appLogs.log
 logging.pattern.file=%d [%level] %c{1.} [%t] %m%n
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+server.error.include-message=always
 aes.password=pdj912
 aes.salt=a09w8o1das
